# UpdateTes

./: .gitignore  README.md  package-lock.json  package.json  portable.txt
.github/workflows/: release.yml
UpdateTes/: package.json  vite.config.js
UpdateTes/src/: main.js  preview.css
src/: index.html  main.js  preview.html  preview.js  textEditor.css  textEditor.html  textEditor.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  input-dialog.json  pin-image.json  preview.json  screenshot.json  settings.json  text-editor.json  updater.json
src-tauri/icons/: icon1024.icns
src-tauri/src/: admin_privileges.rs  ai_config.rs  ai_translator.rs  app_filter.rs  audio_scanner.rs  clipboard_content.rs  commands.rs  data_manager.rs  data_migration.rs  database.rs  database_image_utils.rs  edge_snap.rs  global_state.rs  groups.rs  image_manager.rs  key_state_monitor.rs  lib.rs  main.rs  memory_manager.rs  mouse_utils.rs  pin_image_window.rs  preview_window.rs  quick_texts.rs  sound_manager.rs  state_manager.rs  text_input_simulator.rs  window_animation.rs  window_drag.rs  window_effects.rs  window_management.rs
src-tauri/src/plugins/context_menu/: commands.rs  mod.rs  window.rs
src-tauri/src/plugins/input_dialog/: commands.rs  mod.rs  window.rs
src-tauri/src/screenshot/: auto_selection.rs  image_stitcher.rs  screen_utils.rs  screenshot_window.rs  scrolling_screenshot.rs
src-tauri/src/services/: ai_service.rs  clipboard_service.rs  drag_sort_service.rs  edge_snap_service.rs  file_operation_service.rs  group_service.rs  image_service.rs  mouse_service.rs  paste_service.rs  preview_service.rs  quick_text_service.rs  sound_service.rs  system_service.rs  translation_service.rs  window_service.rs
src-tauri/src/settings/: converter.rs  migration.rs  model.rs  settings_service.rs  state.rs  storage.rs  window.rs
src-tauri/src/updater/: mod.rs  window.rs
src-tauri/src/utils/: content_utils.rs  window_utils.rs
src/css/: index-background.css  index-common.css  musicPlayer.css  row-height-medium.css  row-height-small.css  searchEngineSelector.css  theme-transition.css  titlebar-positions.css
src/js/: aiConfig.js  aiTranslation.js  clipboard.js  colorAnalyzer.js  customSelect.js  quickTexts.js  screenshot.js  scrollbar.js  searchEngineManager.js  shortcutDisplay.js  sidebarHover.js  themeManager.js  titlebarDrag.js  toolManager.js  toolsPanel.js  ui.js  updateChecker.js  window.js  windowAnimation.js
src/musicPlayer/: audioExtractor.js  events.js  folderManager.js  ui.js  (+2 more)
(+149 files in other folders)
