[package]
name = "QuickClipboard"
version = "0.0.4"
description = "一个功能强大的剪贴板管理工具，帮助您更高效地管理和使用剪贴板内容"
authors = ["MoSheng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quickclipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lofty = "0.21"
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-single-instance = "2.2.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.3.0"
once_cell = "1.18.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1.8"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
auto-launch = "0.5"
dirs = "5.0"
sha2 = "0.10"
rodio = "0.17"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
futures-util = "0.3"
fastrand = "2.0"
regex = "1.11.1"
zip = "2.1"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
urlencoding = "2.1"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Ole",
    "Win32_Storage_FileSystem",
    "Win32_System_Com"
] }
window-vibrancy = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]

# 发布版本优化配置
[profile.release]
# 启用链接时优化 (LTO)
lto = true
# 优化速度（高性能优化）
opt-level = 3
# 启用代码生成单元优化
codegen-units = 1
# 启用panic时立即终止
panic = "abort"
# 去除调试符号
strip = true

